# miui_recovery

./: .Change_log_sndnvaps.md.swp  .gitignore  .gitmodules  ChangLog  Change_log_sndnvaps.md  Change_log_sndnvaps.md~  MIUI recovery  Makefile  readme  readme.md  readme.md~
src/: Android.mk  CMakeLists.txt  Makefile  adb_install.c  changeLog  common.h  crash.patch  default_recovery_ui.c  install.c  miui_intent.c  miui_intent.h  mount.c  nandroid.c  nandroid.h  recovery.c  recovery_ui.c  recovery_ui.h  root_device.c  root_device.h  roots.c  roots.h  sideload.c  sideload.h  tags  verifier_test.c
src/applypatch/: Android.mk  applypatch.c  applypatch.sh  freecache.c
src/bmlutils/: Android.mk  bmlutils.c
src/busybox/: busybox
src/dedupe/: Android.mk
src/devices/honor/: device.conf
src/devices/ville/: device.conf
src/etc/: recovery.fstab
src/flashutils/: Android.mk  flashutils.c
src/minelf/: Android.mk
src/minui/: graphics.c
src/miui/: .miui_recovery.log.swp  Android.mk  Makefile.mk
src/miui/include/: minutf8.h
src/miui/src/: miui.h  miui_inter.h  miui_mem.h  utils.h
src/miui/src/controls/: miui_control_button.c  miui_control_check.c  miui_control_checkbox.c  (+7 more)
src/mtdutils/: Android.mk  mounts.c  mounts.h
src/prebuilt_lib/: .Android.mk.swp  Android.mk  adbd.reboot  dedupe
src/prebuilt_lib/busybox/: busybox  busybox-minimal.links
src/res/langs/: cn.lang  en.lang
src/su/: Android.mk.ori
src/supersu/: Android.mk  Superuser.apk
src/utilities/: Android.mk  adbd  adbd_cm10.1  extend_command.c  postrecoveryboot.sh  verifier_test.sh
(+770 files in other folders)
